# zopentimestamps

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/ikki/: Cargo.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/ikki/src/: App.svelte  app.css  app.rs  lib.rs  main.rs  message.rs  theme.rs
crates/ikki/src-tauri/: Cargo.toml
crates/ikki/src-tauri/src/: lib.rs  state.rs
crates/ikki/src-tauri/src/commands/: mod.rs  transactions.rs  wallet.rs
crates/ikki/src/components/: account_card.rs  action_button.rs  mod.rs  transaction_item.rs
crates/ikki/src/lib/components/: AccountCard.svelte  ActionButton.svelte  BottomNav.svelte  Button.svelte  Input.svelte  Toast.svelte  TransactionItem.svelte
crates/ikki/src/lib/stores/: transaction.ts  ui.ts  wallet.ts
crates/ikki/src/lib/utils/: format.ts  tauri.ts
crates/ikki/src/routes/: History.svelte  Home.svelte  Onboarding.svelte  Receive.svelte  Send.svelte  Settings.svelte
crates/ikki/src/views/: history.rs  home.rs  mod.rs  receive.rs  send.rs  settings.rs
crates/zots-cli/: Cargo.toml
crates/zots-cli/src/: cli.rs  main.rs  output.rs
crates/zots-cli/src/commands/: decode.rs  encode.rs  info.rs  mod.rs  nostr.rs  stamp.rs  verify.rs  wallet.rs
crates/zots-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/zots-core/: Cargo.toml  README.md
crates/zots-core/src/: error.rs  hash.rs  lib.rs  proof.rs
crates/zots-desktop/: Cargo.toml
crates/zots-desktop/src/: app.rs  lib.rs  main.rs  message.rs  theme.rs
crates/zots-desktop/src/views/: history.rs  home.rs  mod.rs  settings.rs  stamp.rs  verify.rs  wallet.rs
crates/zots-wasm/: Cargo.toml
crates/zots-wasm/src/: lib.rs
crates/zots-zcash/: Cargo.toml
crates/zots-zcash/src/: config.rs  lib.rs  memo.rs  wallet.rs
docs/: plan.md  prd.md  prompt.md  status.md
misc/apps/ikki/: LICENSE  README.md  index.html  package.json
misc/apps/ikki/src/: app.css
misc/apps/ikki/src-tauri/: Cargo.toml  tauri.conf.json
misc/apps/ikki/src-tauri/icons/: icon.icns
misc/apps/ikki/src-tauri/src/: lib.rs  main.rs  state.rs
misc/apps/ikki/src-tauri/src/commands/: transactions.rs  wallet.rs
misc/apps/ikki/src-tauri/src/wallet/: config.rs  core.rs  mod.rs
misc/apps/ikki/src/lib/components/: BottomNav.svelte  Input.svelte  TransactionItem.svelte
misc/apps/ikki/src/lib/stores/: send.ts  ui.ts
misc/apps/ikki/src/routes/: Contacts.svelte  History.svelte  Onboarding.svelte  Send.svelte  TransactionDetail.svelte
webapp/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
webapp/src/: main.ts
webapp/src/styles/: main.css
