[workspace]
resolver = "2"
members = [
    "crates/zots-core",
    "crates/zots-zcash",
    "crates/zots-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/example/zopentimestamps"

[workspace.dependencies]
# Core
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1", features = ["full"] }

# Zcash - pinned to known working rev
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["lightwalletd-tonic-transport", "transparent-inputs"] }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["transparent-inputs", "unstable"] }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["bundled-prover"] }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["orchard", "sapling", "transparent-inputs"] }
zcash_transparent = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6" }

# gRPC
tonic = { version = "0.14", features = ["tls-native-roots"] }
prost = "0.14"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Crypto
bip0039 = "0.12"
rand = "0.8"
rand_core = "0.6"

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = "0.4"
time = "0.3"

# Output
colored = "2.1"
indicatif = "0.17"

# Misc
dirs = "5.0"
