[package]
name = "ikki"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Ikki - A beautiful Zcash wallet for everyone"

[[bin]]
name = "ikki"
path = "src/main.rs"

[dependencies]
# Core zots crates
zots-zcash = { path = "../zots-zcash" }

# GUI
iced = { version = "0.13", features = ["tokio", "advanced", "qr_code"] }
open = "5"

# Async
tokio = { workspace = true }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Crypto
hex.workspace = true
bip0039.workspace = true
qrcode.workspace = true

# Time
chrono.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Directories
dirs.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Environment
dotenvy.workspace = true

# TLS
rustls.workspace = true
