[package]
name = "zots-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
publish = false
description = "WebAssembly bindings for zOpenTimestamps"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zots-core = { path = "../zots-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
hex = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
