[package]
name = "ikki"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Ikki - A beautiful Zcash wallet for everyone"

[lib]
name = "ikki_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ikki"
path = "src/main.rs"

[dependencies]
# Core zots crates
zots-zcash = { path = "../../zots-zcash" }
zots-core = { path = "../../zots-core" }

# Tauri
tauri = { workspace = true, features = [] }

# Async
tokio = { workspace = true }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Crypto
hex.workspace = true
bip0039.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Directories
dirs.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Environment
dotenvy.workspace = true

# TLS
rustls.workspace = true

[build-dependencies]
tauri-build.workspace = true
