[package]
name = "ikki"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT"
authors = ["Abdel"]
publish = false
description = "Ikki - A beautiful Zcash wallet for everyone"

# This makes the crate standalone, not part of parent workspace
[workspace]

[lib]
name = "ikki_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ikki"
path = "src/main.rs"

[dependencies]
# Tauri
tauri = { version = "2.5", features = [] }

# Async
tokio = { version = "1.44", features = ["full", "sync", "macros", "rt-multi-thread"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Crypto
hex = "0.4"
bip0039 = "0.12"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Directories
dirs = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# TLS
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# Zcash - all from the same git revision for compatibility
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["lightwalletd-tonic-transport", "transparent-inputs", "orchard"] }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["transparent-inputs", "unstable", "orchard"] }
zcash_client_memory = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["transparent-inputs", "orchard"] }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["bundled-prover"] }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6", features = ["orchard", "sapling", "transparent-inputs"] }
zcash_transparent = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "9f47de6" }
zip32 = "0.2"

# gRPC
tonic = { version = "0.14", features = ["tls-native-roots"] }
prost = "0.14"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Time
time = "0.3"
chrono = "0.4"
nonempty = "0.11"

[build-dependencies]
tauri-build = "2.0"
